test/Kubernetes.Tests/testassets/multiple-namespaces/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-ingress
  namespace: ns-one
spec:
  rules:
    - host: 'subdomain1.example.com'
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: the-service
                port: 
                  name: http
---
apiVersion: v1
kind: Service
metadata:
  name: the-service
  namespace: ns-one
spec:
  selector:
    app: repro-1
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: the-service
  namespace: ns-one
subsets:
  - addresses:
    - ip: 10.244.1.11
    - ip: 10.244.1.12
    ports:
    - name: http
      port: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-ingress
  namespace: ns-two
spec:
  rules:
    - host: 'subdomain2.example.com'
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: the-service
                port: 
                  name: http
---
apiVersion: v1
kind: Service
metadata:
  name: the-service
  namespace: ns-two
spec:
  selector:
    app: repro-2
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Endpoints
metadata:
  name: the-service
  namespace: ns-two
subsets:
  - addresses:
    - ip: 10.244.2.22
    - ip: 10.244.2.23
    ports:
    - name: http
      port: 80
      protocol: TCP
