test/Kubernetes.Tests/testassets/multiple-namespaces/routes.json
[
  {
    "RouteId": "the-ingress.ns-one:subdomain1.example.com/",
    "Match": {
      "Methods": null,
      "Hosts": [ "subdomain1.example.com" ],
      "Path": "/{**catch-all}",
      "Headers": null,
      "QueryParameters": null
    },
    "Order": null,
    "ClusterId": "the-service.ns-one:http",
    "AuthorizationPolicy": null,
    "CorsPolicy": null,
    "Metadata": null,
    "Transforms": null
  },
  {
    "RouteId": "the-ingress.ns-two:subdomain2.example.com/",
    "Match": {
      "Methods": null,
      "Hosts": [ "subdomain2.example.com" ],
      "Path": "/{**catch-all}",
      "Headers": null,
      "QueryParameters": null
    },
    "Order": null,
    "ClusterId": "the-service.ns-two:http",
    "AuthorizationPolicy": null,
    "CorsPolicy": null,
    "Metadata": null,
    "Transforms": null
  }
]
